# cpp_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: benchmarks.cmake  capnp.cmake  ccache.cmake  clang-tidy.cmake  compiler-options.cmake  conan.cmake  coverage.cmake  sanitizers.cmake  tests.cmake
src/: CMakeLists.txt
src/project_x/: CMakeLists.txt  addressbook.capnp  lib_file.cpp  lib_file_x.cpp  lib_file_x.h  main.cpp
src/project_x/tests/: CMakeLists.txt  bench_main.cpp  test_main.cpp
